# maro

./: Dockerfile  README.md  app.json  backup_file.py  bot.py  config.py  database.py  dream.db  pyproject.toml  requirements.txt  theo.db  utils.py  version.txt
plugins/: abrag.py  admin.py  aflam.py  antiflood.py  cartoon.py  commands.py  coub.py  developer.py  dice.py  dogbin.py  games.py  general.py  ghnely.py  gif.py  git.py  group_function.py  group_rtb.py  hals.py  hastebin.py  ids.py  keyboard_private.py  locks.py  music.py  play.py  private_ban.py  private_function.py  quran.py  reply.py  rmaziat.py  rtp_function.py  rwayat.py  start.py  status.py  sudos.py  tag.py  telegraph.py  wait.py  weather.py  welcome_bye_laws.py  youtube.py  (+1 more)
plugins/cookies/: cookies.txt
